[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/NPC/Dialog/DialogBox.png" type="Texture" id=1]
[ext_resource path="res://Entities/NPC/Dialog/Dialog.gd" type="Script" id=2]
[ext_resource path="res://Entities/NPC/Dialog/DialogPointer.png" type="Texture" id=3]
[ext_resource path="res://UI/Assets/NokiaCellphone.tres" type="DynamicFont" id=4]
[ext_resource path="res://Entities/NPC/Dialog/DefaultDialog.tres" type="Resource" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Spin"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Dialog" type="Control" groups=[
"Dialog",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
dialog = ExtResource( 5 )

[node name="Background" type="NinePatchRect" parent="."]
margin_left = -24.0
margin_right = 25.0
margin_bottom = 16.0
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="."]
margin_left = -24.0
margin_top = 3.0
margin_right = 25.0
margin_bottom = 19.0
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer" type="Sprite" parent="."]
position = Vector2( 0, 20 )
texture = ExtResource( 3 )
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pointer"]
autoplay = "Spin"
anims/Spin = SubResource( 1 )

[node name="CharIncTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AdvanceTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CharIncTimer" to="." method="increment_char"]
[connection signal="timeout" from="AdvanceTimer" to="." method="increment_text"]
